# safezone-ai-vision-agent

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  demo_video.py  generate_token.py  main.py  pyproject.toml  teach_mode_api.py
backend/agents/: __init__.py  incident_reporter.py  safety_processor.py
backend/knowledge/: safety_instructions.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertTimeline.tsx  IncidentPanel.tsx  LiveStatsBar.tsx  StatusBadge.tsx  TeachModePanel.tsx
frontend/src/hooks/: useSafetyEvents.ts
frontend/src/types/: index.ts
